Glue.Net-Native/Image.h

Exported_Function GLFWimage* CreateIconArray(GLFWimage** arr, int length);
Exported_Function void DeleteWindowIconArr(GLFWimage* arr);